fix for gralde to include the peers and jar exampes, main and test